# XingCode

./: .gitignore  FROM_SCRATCH_IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml  requirements.txt  settings.json
.xingcode/skills/demo-sequence-file/: SKILL.md
Output/: phase10_history_and_local_commands.md  phase11_session_persistence.md  phase11_session_persistence_second_version.md  phase12_guide_reorder.md  phase12_skill_loading_completion.md  phase12_skills_and_manage_cli.md  test_skill_demo_sequence_file.md
src/XingCode/: __init__.py
src/XingCode/adapters/: __init__.py  anthropic_adapter.py  mock_model.py  model_registry.py  openai_adapter.py
src/XingCode/app/: __init__.py  headless.py  install.py  main.py
src/XingCode/commands/: __init__.py  cli_commands.py  manage_cli.py
src/XingCode/core/: __init__.py  agent_loop.py  context_manager.py  prompt.py  prompt_pipeline.py  tooling.py  types.py
src/XingCode/integrations/: __init__.py  mcp.py  skills.py
src/XingCode/security/: __init__.py  file_review.py  permissions.py  (+1 more)
tests/fixtures/: fake_mcp_server.py
tests/integration/: __init__.py  test_anthropic_adapter.py  test_headless.py  test_mcp.py  test_openai_adapter.py
tests/unit/: __init__.py  test_agent_loop.py  test_cli_commands.py  test_config.py  test_context_manager.py  test_file_review.py  test_history.py  test_manage_cli.py  test_mock_model.py  test_model_registry.py  test_permissions.py  test_prompt.py  test_session.py  test_skills.py  test_tooling.py  test_tools_read_write.py  test_tools_registry.py  test_tools_run_command.py  test_types.py
(+13 files in other folders)
